<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpDialog">

    <LinearLayout
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#FFFFBB33"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/usernameS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:autofillHints=""
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/passwordS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:targetApi="o" />

        <Button
            android:id="@+id/FinishSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Finish Sign Up" />
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:targetApi="o" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>