<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sharuk_photo_soccer"
    tools:context=".Dashboard">

    <Button
        android:id="@+id/HostGameButton"
        android:layout_width="166dp"
        android:layout_height="195dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="219dp"
        android:layout_marginRight="219dp"
        android:layout_marginBottom="481dp"
        android:background="@color/common_google_signin_btn_text_light_disabled"
        android:text="@string/host_a_game"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/FindGameButton"
        android:layout_width="174dp"
        android:layout_height="196dp"
        android:layout_marginStart="221dp"
        android:layout_marginLeft="221dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="480dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:text="@string/find_a_game"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LogOutButton"
        android:layout_width="144dp"
        android:layout_height="81dp"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="603dp"
        android:layout_marginEnd="137dp"
        android:layout_marginRight="137dp"
        android:layout_marginBottom="47dp"
        android:padding="@dimen/fab_margin"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>